Bug fixes and z-index removal for navbar

--- a/client/src/app/shared/carousel/carousel.component.scss
+++ b/client/src/app/shared/carousel/carousel.component.scss
@@ -52,6 +52,10 @@
     .desc-btn:hover {
       background-color: $secondary-background-color;
     }
+  
+    .disappear {
+      display: none;
+    }
   }
   
   img:not(.viewed) {
@@ -147,6 +151,14 @@
     }
   }
   
+  .fixed {
+    position: fixed;
+  }
+  
+  .bottom {
+    bottom: 0;
+  }
+  
   .badges {
     align-items: center;
     bottom: 3em;
@@ -193,7 +205,7 @@
 
 .fullscreen {
   align-items: center;
-  background-color: rgba(50, 50, 50, 0.9);
+  background-color: rgba(50, 50, 50, 0);
   display: flex;
   height: 100%;
   justify-content: center;
@@ -208,6 +220,10 @@
     max-width: 80vw;
     z-index: 94;
   }
+}
+
+.fixed {
+  position: fixed;
 }
 
 
