--- a/client/src/app/shared/navbar/header.component.scss
+++ b/client/src/app/shared/navbar/header.component.scss
@@ -17,7 +17,6 @@ header {
   padding: 0.2em;
   position: relative;
 
-  z-index: 5;
 }
 
 .logo img {
